--- a/index.html
+++ b/index.html
@@ -380,6 +380,43 @@
         </div>
       </section>
     </main>
+
+    <footer class="footer">
+      <div class="footer__logo-box">
+        <img src="img/logo-green-2x.png" alt="Full logo" class="footer__logo" />
+      </div>
+      <div class="row">
+        <div class="col-1-of-2">
+          <div class="footer__nav">
+            <ul class="footer__list">
+              <li class="footer__list-item">
+                <a href="#" class="footer__link">Company</a>
+              </li>
+              <li class="footer__list-item">
+                <a href="#" class="footer__link">Contact Us</a>
+              </li>
+              <li class="footer__list-item">
+                <a href="#" class="footer__link">Careers</a>
+              </li>
+              <li class="footer__list-item">
+                <a href="#" class="footer__link">Privacy</a>
+              </li>
+              <li class="footer__list-item">
+                <a href="#" class="footer__link">Terms</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-1-of-2">
+          <p class="footer__copyright">
+            Built by <a href="#" class="footer__link">Shubham Sharma</a> for
+            fun. Copyright &copy; by Shubham Sharma. You are 100% allowed to use
+            this for personal and commercial use but do not claim this to be
+            your design and of course some credits to the owner are appreciated.
+          </p>
+        </div>
+      </div>
+    </footer>
     <!--
         <section class="grid-test">
         <div class="row">
