--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
             >
           </li>
           <li class="navigation__item">
-            <a href="#" class="navigation__link"><span>02</span>Your benfits</a>
+            <a href="#" class="navigation__link"
+              ><span>02</span>Your benifits</a
+            >
           </li>
           <li class="navigation__item">
             <a href="#" class="navigation__link"
@@ -59,7 +61,9 @@
           <span class="heading-primary--main">Outdoors</span>
           <span class="heading-primary--sub">is where life happens</span>
         </h1>
-        <a href="#" class="btn btn--white btn--animated">Discover our tours</a>
+        <a href="#section-tours" class="btn btn--white btn--animated"
+          >Discover our tours</a
+        >
       </div>
     </header>
     <main>
@@ -166,7 +170,7 @@
           </div>
         </div>
       </section>
-      <section class="section-tours">
+      <section class="section-tours" id="section-tours">
         <div class="u-center-text">
           <h2 class="heading-secondary u-margin-bottom-large">
             Most popular tours
@@ -199,7 +203,7 @@
                     <p class="card__price-only">Only</p>
                     <p class="card__price-value">$297</p>
                   </div>
-                  <a href="#" class="btn btn--white">Book now!</a>
+                  <a href="#popup" class="btn btn--white">Book now!</a>
                 </div>
               </div>
             </div>
@@ -233,7 +237,7 @@
                     <p class="card__price-only">Only</p>
                     <p class="card__price-value">$497</p>
                   </div>
-                  <a href="#" class="btn btn--white">Book now!</a>
+                  <a href="#popup" class="btn btn--white">Book now!</a>
                 </div>
               </div>
             </div>
@@ -267,7 +271,7 @@
                     <p class="card__price-only">Only</p>
                     <p class="card__price-value">$897</p>
                   </div>
-                  <a href="#" class="btn btn--white">Book now!</a>
+                  <a href="#popup" class="btn btn--white">Book now!</a>
                 </div>
               </div>
             </div>
@@ -451,6 +455,48 @@
         </div>
       </div>
     </footer>
+
+    <div class="popup" id="popup">
+      <div class="popup__content">
+        <div class="popup__left">
+          <img
+            src="img/nat-8.jpg"
+            alt="tour photo"
+            class="popup__img popup__img--1"
+          />
+          <img
+            src="img/nat-9.jpg"
+            alt="tour photo"
+            class="popup__img popup__img--2"
+          />
+        </div>
+        <div class="popup__right">
+          <a href="#section-tours" class="popup__close">&times;</a>
+          <h2 class="heading-secondary u-margin-bottom-small">
+            Start booking now
+          </h2>
+          <h3 class="heading-tertiary u-margin-bottom-small">
+            Important &ndash; Please read these terms before booking
+          </h3>
+          <div class="popup__text">
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              Tincidunt eget nullam non nisi est sit amet facilisis. Porttitor
+              eget dolor morbi non arcu risus quis varius quam. Ac turpis
+              egestas maecenas pharetra. Ac odio tempor orci dapibus.
+              Scelerisque felis imperdiet proin fermentum leo. Ultrices in
+              iaculis nunc sed augue lacus viverra vitae. Felis eget velit
+              aliquet sagittis id. Id semper risus in hendrerit. Vitae semper
+              quis lectus nulla at volutpat diam ut. Nisl pretium fusce id velit
+              ut. Amet consectetur adipiscing elit pellentesque habitant morbi
+              tristique senectus. Sagittis purus sit amet volutpat.
+            </p>
+          </div>
+          <a href="#" class="btn btn--green">Book now!</a>
+        </div>
+      </div>
+    </div>
     <!--
         <section class="grid-test">
         <div class="row">
